force-app/main/default/objects/Volunteer_Application__c/Volunteer_Application__c.object-meta.xml
<CustomObject>
    <description>Application to become a volunteer</description>
    <label>Volunteer Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>