force-app/main/default/objects/Volunteer_Application__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>The person applying to be a volunteer</description>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Applications</relationshipLabel>
    <relationshipName>Volunteer_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>