force-app/main/default/objects/Volunteer_Application__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>Volunteer availability</description>
    <label>Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday Mornings</fullName>
            </value>
            <value>
                <fullName>Weekday Afternoons</fullName>
            </value>
            <value>
                <fullName>Weekday Evenings</fullName>
            </value>
            <value>
                <fullName>Weekend Mornings</fullName>
            </value>
            <value>
                <fullName>Weekend Afternoons</fullName>
            </value>
            <value>
                <fullName>Weekend Evenings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>