force-app/main/default/objects/Volunteer_Application__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Previous volunteer experience</description>
    <label>Experience</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>