force-app/main/default/objects/Volunteer_Application__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Skills the volunteer has</description>
    <label>Skills</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>